--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# .env
+.env
+
+# notes
+notes.txt
+
 # Compiled output
 /dist
 /tmp
